# flake8-alphabetize

./: .gitattributes  .gitignore  MANIFEST.in  README.adoc  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test.yaml
alphabetize/: __init__.py  core.py
flake8_alphabetize/: __init__.py  _version.py  core.py
test/: conftest.py  test_alphabetize.py  test_cmd.py
test/cmd/: case_app_name.py  case_standard_fail.py  test_cmd.py
test/unit/: test_alphabetize.py
