[metadata]
name = flake8-alphabetize
description = A Python style checker for alphabetizing import and __all__.
long_description = flake8-alphabetize
    ------------------

   A Flake8 style checker for alphabetizing ``import`` and ``__all__``. Please see
   `the documentation <https://github.com/tlocke/flake8-alphabetize>`_.
long_description_content_type = text/rst
url = https://github.com/tlocke/flake8-alphabetize
license = MIT-0
classifiers =
    Framework :: Flake8
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT No Attribution License (MIT-0)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance


[options]
python_requires = >=3.7
install_requires =
    flake8 > 3.0.0
    stdlib_list == 0.8.0 ; python_version < "3.10"
    importlib-metadata >= 1.0 ; python_version < "3.8"
packages =
    flake8_alphabetize


[options.entry_points]
flake8.extension =
    AZ = flake8_alphabetize:Alphabetize


[flake8]
ignore = E203,W503
max-line-length = 88
exclude = .git,__pycache__,build,dist,venv,.tox,test/cmd
application-names = flake8_alphabetize
